2012-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.cc (main): Call listen right after creating the
	transport.
	* transport_pipes.cc (transport_layer_pipes::listen): Create
	first instance of the named pipe here.  Connect the client side
	to block it for further use by the system.
	(transport_layer_pipes::accept): Don't handle first pipe instance
	here.  Change debug output accordingly.

2012-11-23  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* Makefile.in: Use /bin/mkdir to make install directories.

2012-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* sysv_sem.cc (semundo_clear): Move condition to break from
	inner loop to the right spot.

2012-11-12  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* Makefile.in: Revamp for new configury.
	* configure.in: Revamp for new configury.
	* aclocal.m4: Regenerate.
	* configure: Ditto.
	* autogen.sh: New script.

2012-10-25  Corinna Vinschen  <corinna@vinschen.de>

	* bsd_helper.cc (adjust_identity_info): Fix typo in log message.

2012-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* woutsup.h: Just include winlean.h.

2012-03-19  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* client.cc: Revert sigproc.h inclusion since it was fixed elsewhere.

2012-03-19  Corinna Vinschen  <corinna@vinschen.de>

	* client.cc: Include sigproc.h if __INSIDE_CYGWIN__ is defined.

2012-03-19  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* client.cc: Remove unneeded #include "sigproc.h".

2012-02-14  Corinna Vinschen  <corinna@vinschen.de>

	* transport_pipes.cc (transport_layer_pipes::transport_layer_pipes):
	Always use cygwin_internal to fetch installation key.

2011-10-10  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.cc (print_usage): Align output to utilities in utils
	directory.
	(print_version): Ditto.

2011-08-18  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* sysv_shm.cc (ACCESSPERMS): Remove to fix redefined warning, as
	this is now defined in <sys/stat.h>.
